# CybersecurityProjects

Proj/Beg/b64tool/: README.md  pyproject.toml
Proj/Beg/b64tool/.hypothesis/constants/: 0e78f6debf2c4d8a  27bce5520d1e1265  4b97d6ffe153d436  67fa30cfc7808c2e  6bbedfebd18237b7  71043825a1fcdd8f  a9967ef0678142ce  ba72ff8ea470ca10  cc03358322239dd4
Proj/Beg/b64tool/Learn/: 00-OVERVIEW.md  01-CONCEPTS.md  02-ARCHITECTURE.md  03-IMPLEMENTATION.md  04-CHALLENGES.md
Proj/Beg/b64tool/src/b64tool/: __init__.py  cli.py  constants.py  detector.py  formatter.py
Proj/Beg/b64tool/src:b64tool/: encoders.py  gitignore.txt  main.py  peeler.py  utils.py
Proj/Beg/b64tool/tests/: __init__.py  test_cli.py  test_detector.py  test_encoders.py  test_peeler.py  test_properties.py
Tools/AutomationScripts/Security Scripts/Debian:Linux Systems/: Backup_Automation.sh
